# LTG

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  azure-ingress-nginx-source.yaml  azure-ltgenius-deploy-dev.yml  azure-ltgenius-deploy-prod.yml  azure-ltgenius-ingress-deploy.yml  azure-pipelines-destroy.yml  azure-pipelines.yml  docker-compose.yml  pyproject.toml  run.sh  settings.ini
app/: _modidx.py  config.json  server.py
app/api_models/: responses.py
app/configs/: clients.py  credentials.py  settings.py
app/log_configs/: logConfDev.cfg  logConfProd.cfg  logConfTest.cfg
app/modules/: __init__.py  chain.py  standard_processor.py
app/policy/: control_gap_analyzer.py  demo.py  exp.py  generate_controls.py  generate_policies.py  job_tracker.py  policy_gap_analyzer.py
app/routers/: policy.py
infra/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
k8s-deployments/: ltgenius-deployment-dev.yaml  ltgenius-deployment-prod.yaml  ltgenius-ingress-dev.yaml  ltgenius-ingress-prod.yaml
nbs/: _quarto.yml  developer_guide.ipynb  index.ipynb  nbdev.yml  sidebar.yml  styles.css  ui.py
nbs/APIs/: 00_generate_controls.ipynb  01_generate_policy.ipynb  02_controls_analyzrer.ipynb  03_policy_analyzer.ipynb  04_jobs_tracker.ipynb  05_ui_main.ipynb
nbs/Helper/: llm_functions.ipynb  prompts.ipynb  tools.ipynb
nbs/Routers/: 00_policy.ipynb  (+1 more)
notebooks/: Nas.txt  sample_test.ipynb
temp_data/: Standard_ISO-9001-2015 copy.json  Standard_ISO-IEC-27001-2022.json
tests/: pyproject.toml  test_requirements.txt
(+19 files in other folders)
